# chrome-bookmark-rest-controller

./: README.md  pyproject.toml
.homebrew/: bookmarkctl.rb
extension/: popup.js  service-worker.js
src/bookmarkctl/: api.py  cli.py  models.py  store.py
