[project]
name = "bookmarkctl"
version = "0.2.0"
description = "Control Chrome bookmarks through a local FastAPI command queue and Typer CLI."
authors = [
    { name = "Yarden Zamir", email = "dev@yarden-zamir.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "rich>=15.0.0",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
]

[project.scripts]
bookmarkctl = "bookmarkctl.cli:app"

[build-system]
requires = ["uv_build>=0.11.26,<0.12.0"]
build-backend = "uv_build"
